// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`misc functions debug! debug value. 1`] = `
"*** LITS DEBUG ***
{
  "λ": true,
  "t": 0,
  "o": [
    {
      "as": {
        "mandatoryArguments": [
          "%1"
        ]
      },
      "a": 1,
      "b": [
        {
          "t": 2,
          "n": ">",
          "p": [
            {
              "t": 4,
              "v": "%1"
            },
            {
              "t": 0,
              "v": 2
            }
          ]
        }
      ],
      "f": {}
    }
  ]
}
"
`;

exports[`misc functions debug! debug value. 2`] = `
"*** LITS DEBUG ***
{
  "λ": true,
  "d": {
    "code": "(debug! #(> %1 2))",
    "line": 1,
    "column": 9
  },
  "t": 0,
  "o": [
    {
      "as": {
        "mandatoryArguments": [
          "%1"
        ]
      },
      "a": 1,
      "b": [
        {
          "t": 2,
          "n": ">",
          "p": [
            {
              "t": 4,
              "v": "%1",
              "tkn": {
                "t": 2,
                "v": "%1",
                "d": {
                  "code": "(debug! #(> %1 2))",
                  "line": 1,
                  "column": 13
                }
              }
            },
            {
              "t": 0,
              "v": 2,
              "tkn": {
                "t": 1,
                "v": "2",
                "d": {
                  "code": "(debug! #(> %1 2))",
                  "line": 1,
                  "column": 16
                }
              }
            }
          ],
          "tkn": {
            "t": 2,
            "v": ">",
            "d": {
              "code": "(debug! #(> %1 2))",
              "line": 1,
              "column": 11
            }
          }
        }
      ],
      "f": {}
    }
  ]
}
"
`;

exports[`misc functions debug! multiple contexts 1`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1
  <empty>

Context 2 - Global context
  x     10
  foo   <0 function foo>
  bar   <0 function λ>
  plus  <9 function +>


"
`;

exports[`misc functions debug! multiple contexts 2`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1
  <empty>

Context 2 - Global context
  x     10
  foo   <0 function foo>
  bar   <0 function λ>
  plus  <9 function +>


"
`;
